// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChipStatus Match snapshot 1`] = `
<div>
  <div
    class="tremor-Flex-root flex flex-row justify-center items-center shrink-0 w-9 h-9 border rounded-full text-primary dark:text-primary dark:hover:text-primary border-primary"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.005 3.1a1 1 0 1 1 1.99 0l-.388 6.35a.61.61 0 0 1-1.214 0L7.005 3.1ZM7 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0Z"
      />
    </svg>
  </div>
</div>
`;

exports[`ChipStatus match snapshot with value is decrease 1`] = `
<div>
  <div
    class="tremor-Flex-root flex flex-row justify-center items-center shrink-0 w-9 h-9 border rounded-full text-attention dark:text-attention dark:hover:text-attention border-attention"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
      />
    </svg>
  </div>
</div>
`;

exports[`ChipStatus match snapshot with value is increase 1`] = `
<div>
  <div
    class="tremor-Flex-root flex flex-row justify-center items-center shrink-0 w-9 h-9 border rounded-full text-few dark:text-few dark:hove:text-few border-few"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6.293 13.293 1.414 1.414L12 10.414l4.293 4.293 1.414-1.414L12 7.586z"
      />
    </svg>
  </div>
</div>
`;
